--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots clean install
+        run: mvn --batch-mode --update-snapshots clean install -Pno-api-run
   test:
     name: TEST API AUTOMATION
     needs: build
